<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Screen Notifications</string>
    <string name="rate">Rate Screen Notifications</string>
    <string name="description">Screen Notifications will turn your screen on when you get a 
        notification from the selected apps. The screen will not turn on if your device is in your pocket.</string>
    <string name="accessibility_launch">You will be now taken to the Accessibility settings. 
        If you wish to stop Screen Notificaitons, simply turn it off.</string>
    <string name="accessibility_warning">Clicking ok will take you to the Accessibility settings. 
        For this app to work you will need to turn on Screen Notifications. 
        Android will warn you that the app may capture your private data, this app in no way captures any data and has no access to the internet.</string>
    <string name="notification_listener_launch">You will be now taken to the notification settings.
        If you wish to stop Screen Notifications, simply turn it off.</string>
    <string name="notification_listener_warning">Clicking ok will take you to the notification settings.
        For this app to work you will need to turn on Screen Notifications.
        Android will warn you that the app may capture your private data, this app in no way captures any data and has no access to the internet.</string>
    <string name="device_admin_explanation">Screen Notifications needs device admin access to turn off your screen after a notification</string>
    <string name="ok">OK</string>
    <string name="donate">Donate</string>
    <string name="donate_summary">Donate to help support app development</string>
    <string name="select_an_amount">Select a donation amount</string>
    <string name="there_was_a_problem">There was a problem</string>
    <string name="failed_billing">There was a problem trying to make a donation, your phone may not support in app billing or there may be a problem communicating with the server. Please try again later</string>
    <string name="service">Service</string>
    <string name="service_title">Screen Notifications Service</string>
    <string name="service_summary">Enable to turn on Screen Notifications</string>
    <string name="admin_title">Device Admin</string>
    <string name="admin_summary">Enable to allow shorter screen timeouts</string>
    <string name="apps">Apps</string>
    <string name="select_apps">Select Apps</string>
    <string name="more_apps">More apps will appear as notifications are received</string>
    <string name="no_apps">No app has created a notification yet. Check back later to enable or disable an app. By default any notification will turn the screen on unless the app is disabled here.</string>
    <string name="select_apps_summary">Enable and disable apps to turn the screen on for notifications. Apps that create a notification for the first time will automatically turn the screen on.</string>
    <string name="options">Options</string>
    <string name="wake_length">Screen wake length</string>
    <string name="wake_length_summary">Keep screen on for</string>
    <string name="wake_length_summary_2">seconds after notification</string>
    <string name="disabled_wake_length">Device Admin option must be enabled first</string>
    <string name="delay_title">Delay</string>
    <string name="delay_summary">Wait %d seconds before turning the screen on.\n\nUse this option if turning the screen on prevents notification sounds from playing.</string>
    <string name="full_brightness">Full Brightness</string>
    <string name="full_brightness_summary">When enabled, the screen will always turn on at full brightness for notifications</string>
    <string name="disable_sensor">Disable Proximity Sensor</string>
    <string name="disable_sensor_summary">When enabled, the screen will always turn on for notifications, even in your pocket</string>
    <string name="quiet_time">Quiet Time</string>
    <string name="experimental">Experimental</string>
    <string name="help">Help</string>
    <string name="recent_apps">Recent Apps</string>
    <string name="recent_apps_summary">Display a list of apps that have recently turned on the screen</string>
    <string name="no_recent_apps">No app has created a notification yet. Check back later.</string>
    <string name="uninstalled_app">Uninstalled App</string>
    <string name="contact">Contact Developer</string>
    <string name="contact_summary">If you are having problems, click here to contact the developer</string>
    <string name="version">Version</string>
    <string name="select">Select Apps</string>
    <string name="inverse">Inverse</string>
    <string name="uncheck_all">Uncheck all</string>
    <string name="loading">Loading. Please wait...</string>
    <string name="quietHours">Enable quiet hours</string>
    <string name="quietSum">Do not turn the screen on between the hours below</string>
    <string name="startTime">Start quiet hours</string>
    <string name="stopTime">Stop quiet hours</string>
    <string name="set">Set</string>
    <string name="statusBar">Open notification tray</string>
    <string name="statusBarSum">Open the tray when the screen is turned for a notification.
        This is experimental and will only work on a small number of phones.</string>

    <string name="market_description">
        A very simple app that turns your screen on for a specified period time when you get a notification. 
        If your device is in your pocket or the proximity sensor is otherwise covered, the screen will not turn on.

		Any ideas or feature requests are welcome, please email me with them.
		
		If you would like to translate this app, please visit the following link: 
		https://www.transifex.com/projects/p/screen-notifications/

		If you have issues or enhancements, fork me on github:
		https://github.com/lkorth/screen-notifications
    </string>
</resources>