<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <PreferenceCategory android:title="@string/service" >
         <CheckBoxPreference
            android:key="service"
            android:title="@string/service_title" 
            android:summary="@string/service_summary" />
        <CheckBoxPreference
            android:key="device_admin"
            android:title="@string/admin_title"
            android:summary="@string/admin_summary" />
        <Preference
            android:key="test_notification"
            android:title="@string/test_notification"
            android:summary="@string/test_notification_summary" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/apps" >
        <Preference
            android:key="app"
            android:title="@string/select_apps"
            android:summary="@string/select_apps_summary">
                 <intent
                     android:action="android.intent.action.VIEW"
                     android:targetPackage="com.lukekorth.screennotifications"
                     android:targetClass="com.lukekorth.screennotifications.AppsActivity" />
            </Preference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/options" >
        <Preference
            android:key="wake_length"
            android:title="@string/wake_length" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="bright"
            android:title="@string/full_brightness"
            android:summary="@string/full_brightness_summary" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="proxSensor"
            android:title="@string/disable_sensor"
            android:summary="@string/disable_sensor_summary" />
        <EditTextPreference
            android:defaultValue="5"
            android:inputType="number"
            android:title="@string/maximumPoolingTime"
            android:summary="@string/maximumPoolingTime_summary"
            android:key="maximumPoolingTime"/>
        <EditTextPreference
            android:defaultValue="2"
            android:inputType="number"
            android:title="@string/accelerometerThreshold"
            android:summary="@string/accelerometerThreshold_summary"
            android:key="accelerometerThreshold"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/quiet_time">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="quiet"
            android:summary="@string/quietSum"
            android:title="@string/quietHours" />
        <com.lukekorth.screennotifications.views.TimePreference
            android:defaultValue="22:00"
            android:key="startTime"
            android:showDefault="true"
            android:title="@string/startTime" />
        <com.lukekorth.screennotifications.views.TimePreference
            android:defaultValue="08:00"
            android:key="stopTime"
            android:showDefault="true"
            android:title="@string/stopTime" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/experimental">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="status-bar"
            android:summary="@string/statusBarSum"
            android:title="@string/statusBar" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/help">
        <Preference
            android:selectable="false"
            android:enabled="true"
            android:key="restarting_info"
            android:title="It does not work?!"
            android:summary="Try to restart your phone, sometimes the app can just receive and react to notifications after the phone was restarted." />
        <Preference
            android:key="contact"
            android:title="@string/contact"
            android:summary="@string/contact_summary" />
        <Preference
            android:key="version"
            android:title="@string/version" />
    </PreferenceCategory>
</PreferenceScreen>